# cac_graphics

./: Cargo.toml  README.md
context/: Cargo.toml
context/examples/: playground.rs
context/src/: buffer.rs  error.rs  gl43_core.rs  lib.rs  opengl.rs  render_target.rs  shader.rs  vertex_layout.rs
context/src/opengl/: buffer.rs  render_rarget.rs  render_target.rs  shader.rs  stage.rs  vertex_layout.rs
context/tests/conformance_tests/: buffer.rs  context.rs  main.rs  render_target.rs  runner.rs
context/tests/conformance_tests/platform/: mod.rs  opengl.rs
core/: Cargo.toml
core/src/: color32.rs  gen_vec.rs  image.rs  lib.rs
